# Cores2

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE
inc/application/: app_application.hpp  app_main_window.hpp  app_tree_presenter.hpp
inc/geometry/: gm_camera_model.hpp  gm_frame.hpp  gm_mesh.hpp  gm_triangle.hpp  gm_types.hpp
inc/import_export/: ie_obj.hpp  ie_stl.hpp
inc/node/: node_node.hpp  node_tree.hpp
inc/ui/: ui_file_menu.hpp  ui_ids.hpp  ui_padding_sizer.hpp  ui_scene_viewer.hpp  ui_viewport_converter.hpp  ui_viewport_ratio.hpp
inc/ux/: ux_camera_controller.hpp  ux_mouse_event.hpp
inc/visualization/: vi_axes.hpp  vi_drawable.hpp  vi_mesh.hpp  vi_shader_compiler.hpp  vi_shader_holder.hpp  vi_uniforms.hpp
shaders/: axes_fragment.glsl  axes_vertex.glsl  mesh_fragment.glsl  mesh_vertex.glsl
src/application/: app_application.cpp  app_entry_point.cpp  app_main_window.cpp
src/import_export/: ie_obj.cpp  ie_stl.cpp
src/ui/: ui_scene_viewer.cpp
src/ux/: ux_camera_controller.cpp
src/visualization/: vi_axes.cpp  vi_drawable.cpp
